--- a/Assignment4/.classpath
+++ b/Assignment4/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Dave/Downloads/Jama-1.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dave/Desktop/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dave/Desktop/jogl-all.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
